tests/baselines/reference/ES5For-ofTypeCheck7(strict=true).errors.txt
ES5For-ofTypeCheck7.ts(2,15): error TS2454: Variable 'union' is used before being assigned.
ES5For-ofTypeCheck7.ts(2,15): error TS2461: Type 'number' is not an array type.


==== ES5For-ofTypeCheck7.ts (2 errors) ====
    var union: string | number;
    for (var v of union) { }
                  ~~~~~
!!! error TS2454: Variable 'union' is used before being assigned.
                  ~~~~~
!!! error TS2461: Type 'number' is not an array type.